<resources>
    <string name="app_name">MyNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="books_">Books</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dowloading">Downloading ...</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="little_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="title">Title</string>
    <string name="date">01/01/2001</string>

    <string name="query_hint">Search query term</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>

    <string name="search_articles">Search articles</string>
    <string name="notifications">Notifications</string>
    <string name="an_error_has_occured">An error has occured</string>

    <string name="enable_notification">Enable notifications (once per day)</string>

    <string name="about_message">This news are provided by the NewYork Times © \n Author : Jacques Hoschtettler \n on a idea by OpenclassRooms©</string>

    <string name="notification_result">Notification result : </string>

    <string name="none_articles_found">There is no article for : \n\tquery : </string>
    <string name="search_and_notification_begin_date">\n\tfrom : </string>
    <string name="search_article_end_date">\n\tto :</string>
    <string name="article_query_filters">\n\tin the domain(s) :</string>
    <string name="notification_date_label">Today,  </string>
    <string name="one_article_found">There is one article for : \n\tquery : </string>
    <string name="more_articles_found_begin">There is </string>
    <string name="more_articles_found_end"> articles found for ; \n\tquery : </string>


    </resources>
