<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_item_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/news_item_image"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@mipmap/ic_launcher"
        android:padding="@dimen/simple_padding"
        android:contentDescription="Article illustration" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/simple_padding"
        android:paddingEnd="@dimen/simple_padding"
        android:paddingStart="@dimen/simple_padding">

        <TextView
            android:id="@+id/news_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/news_item_date"
            android:gravity="left"
            android:text="@string/title"
            android:theme="@style/normalTitle" />

        <TextView
            android:id="@+id/news_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/news_item_article"
            android:gravity="right"
            android:text="@string/date"
            android:textSize="@dimen/text_normal"
            android:theme="@style/normalTitle"
            />

        <TextView
            android:id="@+id/news_item_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/little_lorem_ipsum"
            android:layout_below="@id/news_item_title"
            android:theme="@style/textArticle"
            />

    </RelativeLayout>

</LinearLayout>