<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/double_padding"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/double_padding"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/query_hint"
                android:textColorHint="@color/colorSecondary"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/search_dates"
            android:padding="@dimen/double_padding"
            >

            <Button
                android:layout_width="0dp"
                android:layout_weight="40"
                android:layout_height="wrap_content"
                android:id="@+id/begin_date_btn"
                android:text="@string/begin_date"
                android:padding="@dimen/simple_padding"
                android:onClick="showDatePickerDialog"
                android:backgroundTint="@color/white"
                android:textColor="@color/colorSecondary"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="40"
                android:layout_height="wrap_content"
                android:id="@+id/end_date_btn"
                android:text="@string/end_date"
                android:padding="@dimen/simple_padding"
                android:onClick="showDatePickerDialog"
                android:backgroundTint="@color/white"
                android:textColor="@color/colorSecondary"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/double_padding"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/double_padding"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"/>

            </LinearLayout>



        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:backgroundTint="@color/colorSecondary"
            android:elevation="@dimen/double_padding"
            android:layout_margin="@dimen/double_padding"
            app:srcCompat="@mipmap/ic_search_white_36dp"

            />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enable_notification"
            android:textColor="@color/colorSecondary"
            android:layout_gravity="bottom"/>


    </com.google.android.material.appbar.AppBarLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
